fix the styling on mobile

--- a/web/src/components/Villager.module.css
+++ b/web/src/components/Villager.module.css
@@ -11,7 +11,7 @@
     row-gap: 5px;
     align-items: center;
     justify-items: center;
-    width: calc(100% - 30px);
+    width: calc(100% - 40px);
     text-align: right;
 
     background-color: rgb(212, 191, 135);
@@ -120,15 +120,20 @@
 }
 
 @media (max-width: 730px) {
+    .villagerWrapper {
+        margin: 5px 0;
+    }
+
     .villagerName {
         font-size: 16px;
         font-weight: bold;
     }
 
     .villager {
-        padding: 5px;
+        padding: 5px 0;
         border-radius: 5px;
-        grid-template-columns: 50px 30px 1fr 30px 1fr;
+        grid-template-columns: 60px 30px 1fr 30px 1fr;
+        width: calc(100% - 5px);
     }
 
     .villager .like {
